hphp/test/slow/yield/throw/throw_uncaught.php.expectf

Fatal error: Uncaught exception 'RuntimeException' with message 'test' in %s/throw_uncaught.php:10
Stack trace:
#0 {main}
